<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_todo_lists_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_todo_lists_sort_by_name"
                android:title="@string/sort_by_name" />

            <item
                android:id="@+id/action_todo_lists_sort_by_date_created"
                android:title="@string/sort_by_date" />
        </menu>

    </item>

    <item
        android:id="@+id/action_delete_all_todo_lists"
        android:title="@string/delete_all"
        app:showAsAction="never" />

</menu>