<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.task.addedittask.AddEditTaskDialog">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/add_edit_task_title"
        android:layout_width="@dimen/indent_0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="@dimen/indent_24dp"
        android:paddingTop="@dimen/indent_16dp"
        android:paddingEnd="@dimen/indent_24dp"
        android:paddingBottom="@dimen/indent_16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/btn_done"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/add_task" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/indent_8dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="@id/add_edit_task_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/indent_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_edit_task_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/indent_16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_task_name_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textVisiblePassword|textNoSuggestions"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/check_box_important"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/important_task" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_date_created"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Date created:" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>