<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.todolist.addtodolist.AddTodoListDialog">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/add_todo_list_title"
        android:layout_width="@dimen/indent_0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="@dimen/indent_24dp"
        android:paddingTop="@dimen/indent_16dp"
        android:paddingEnd="@dimen/indent_24dp"
        android:paddingBottom="@dimen/indent_16dp"
        android:text="@string/add_todo_list"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/btn_done"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/indent_8dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="@id/add_todo_list_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_task_name_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/indent_0dp"
        android:layout_height="wrap_content"
        android:hint="@string/todo_list_name"
        android:padding="@dimen/indent_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_todo_list_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>