<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.note.addeditnote.AddEditNoteFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/JustNotes.ToolbarOverlay"
            app:popupTheme="@style/JustNotes.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:animateLayoutChanges="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notes_title_edit_text"
            android:layout_width="@dimen/indent_0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_margin="@dimen/indent_16dp"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:maxLines="1"
            android:padding="@dimen/indent_16dp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notes_content_edittext"
            android:layout_width="@dimen/indent_0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_margin="@dimen/indent_16dp"
            android:hint="@string/note_content"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:padding="@dimen/indent_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notes_title_edit_text" />

        <CheckBox
            android:id="@+id/check_box_important"
            android:layout_width="@dimen/indent_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indent_16dp"
            android:layout_marginEnd="@dimen/indent_16dp"
            android:text="@string/important_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notes_content_edittext" />

        <CheckBox
            android:id="@+id/check_box_set_reminder"
            android:layout_width="@dimen/indent_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indent_16dp"
            android:layout_marginEnd="@dimen/indent_16dp"
            android:text="@string/set_reminder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_box_important" />

        <Spinner
            android:id="@+id/spinner_reminder_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indent_16dp"
            android:layout_marginEnd="@dimen/indent_16dp"
            android:visibility="gone"
            android:padding="@dimen/indent_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_box_set_reminder"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>